# raytracer

./: .gitignore  Cargo.toml  index.html  index.js  pnpm-lock.yaml  webpack.config.js  worker.js
raytracer_rust_common/: Cargo.toml
raytracer_rust_common/src/: camera.rs  lib.rs  scene.rs
raytracer_rust_common/src/components/: material.rs  noise.rs  texture.rs
raytracer_rust_common/src/components/surface/: mod.rs
raytracer_rust_common/src/util/: vec3.rs
raytracer_rust_native/: Cargo.toml
raytracer_rust_native/src/: main.rs  worker.rs
raytracer_rust_wasm/: Cargo.toml  index.js  package.json  worker.js
raytracer_rust_wasm/src/: lib.rs
raytracer_rust_wasm/src/components/surface/: primitive.rs
raytracer_ts/: camera.ts  hittable.ts  index.ts  material.ts  noise.ts  scene.ts  texture.ts  util.ts
raytracer_wasm/: Cargo.toml  package.json
raytracer_wasm/src/: camera.rs  lib.rs  scene.rs
raytracer_wasm/src/components/: texture.rs
raytracer_wasm/src/components/surface/: instance.rs  structure.rs
raytracer_wasm/src/util/: mod.rs
raytracer_wgpu/: Cargo.toml
raytracer_wgpu/src/: main.rs  setup.rs
src/: camera.rs  lib.rs  material.rs  scene.rs  surface.rs  util.rs  vec3.rs
src/components/: material.rs  mod.rs  noise.rs  surface.rs  texture.rs
src/components/surface/: mod.rs  primitive.rs  structure.rs  volume.rs
src/util/: bounding_box.rs  interval.rs  mod.rs  vec3.rs
