[package]
name = "raytracer_rust_native"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
eframe = { version = "0.35.0", features = ["persistence"] }
env_logger = "0.11.11"
rayon = "1.12.0"
raytracer_rust_common = { path = "../raytracer_rust_common", features = [
    "serde",
] }
serde = { version = "1.0.228", features = ["derive"] }
