[package]
name = "raytracer_rust_wasm"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.4.3", features = ["wasm_js"] }
js-sys = "0.3.103"
wasm-bindgen = "0.2.126"
raytracer_rust_common = { path = "../raytracer_rust_common" }

[dependencies.web-sys]
version = "0.3.103"
features = [
    "ImageData",
    'Window',
    "console",
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
    "DedicatedWorkerGlobalScope",
    "Performance",
    "MessagePort",
]

[lib]
crate-type = ["cdylib"]


[target.wasm32-unknown-unknown]
rustflags = [
    # Set the initial memory allocation (e.g., 256MB)
    "-C",
    "link-arg=--initial-memory=268435456",
    # Set the maximum memory allocation to the absolute 4GB cap
    "-C",
    "link-arg=--max-memory=4294967296",
]
